Fully functional example SyncAdapter implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/AppTheme">
         <provider
             android:name=".providers.DummyContentProvider"
-            android:authorities="dummycontentprovider"
+            android:authorities="com.example.android.datasync.provider"
             android:enabled="true"
             android:exported="false">
         </provider>
