--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,13 @@ dependencies {
     compile 'org.parceler:parceler-api:1.1.6'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.google.android.gms:play-services-auth:10.0.0'
+    compile 'pub.devrel:easypermissions:0.1.5'
+    compile('com.google.api-client:google-api-client-android:1.22.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    compile('com.google.apis:google-api-services-calendar:v3-rev225-1.22.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
     testCompile 'junit:junit:4.12'
 }
