--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,26 @@ android {
         }
     }
 }
+apply plugin: 'com.android.application'
+
+android {
+    compileSdkVersion 23
+    buildToolsVersion "25.0.0"
+    defaultConfig {
+        applicationId "com.example.jaroslavistok.personalmobileassistantformanagingdiabetes"
+        minSdkVersion 15
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -32,13 +52,5 @@ dependencies {
     compile 'org.parceler:parceler-api:1.1.6'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.google.android.gms:play-services-auth:10.0.0'
-    compile 'pub.devrel:easypermissions:0.1.5'
-    compile('com.google.api-client:google-api-client-android:1.22.0') {
-        exclude group: 'org.apache.httpcomponents'
-    }
-    compile('com.google.apis:google-api-services-calendar:v3-rev225-1.22.0') {
-        exclude group: 'org.apache.httpcomponents'
-    }
     testCompile 'junit:junit:4.12'
 }
