--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 
+
 android {
     compileSdkVersion 23
     buildToolsVersion "25.0.0"
@@ -52,5 +53,9 @@ dependencies {
     compile 'org.parceler:parceler-api:1.1.6'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
