--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jaroslavistok.personalmobileassistantformanagingdiabetes">
 
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
@@ -19,20 +20,26 @@
             android:enabled="true"
             android:exported="false" />
 
+        <provider
+            android:name=".recycler_view_test.RequestProvider"
+            android:authorities="com.example.android.test.provider"
+            android:enabled="true"
+            android:exported="false" />
+
+
         <activity
             android:name=".LogBookActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".AddLogActivity"
+            android:name=".AddLogEntry"
             android:label="@string/title_activity_add_log"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".HomeScreen"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -69,10 +76,15 @@
             </intent-filter>
         </service>
 
-        <activity
-            android:name=".AddLogEntry"
-            android:label="@string/title_activity_add_log_entry"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".recycler_view_test.MainActivity">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+
+
     </application>
 
 </manifest>
