--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jaroslavistok.personalmobileassistantformanagingdiabetes">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -19,13 +19,11 @@
             android:authorities="com.example.android.datasync.provider"
             android:enabled="true"
             android:exported="false" />
-
         <provider
             android:name=".recycler_view_test.RequestProvider"
             android:authorities="com.example.android.test.provider"
             android:enabled="true"
             android:exported="false" />
-
 
         <activity
             android:name=".LogBookActivity"
@@ -40,6 +38,7 @@
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -77,14 +76,21 @@
         </service>
 
         <activity android:name=".recycler_view_test.MainActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
+        <activity
+            android:name=".alarm_example.AlarmActivity"
+            android:label="@string/title_activity_alarm"
+            android:theme="@style/AppTheme.NoActionBar" />
 
-
+        <receiver android:name=".alarm_example.SampleAlarmReceiver" />
+        <service android:name=".alarm_example.SampleSchedulingService" />
     </application>
 
 </manifest>
