--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -17,11 +18,6 @@
         <provider
             android:name=".providers.EntriesContentProvider"
             android:authorities="com.example.android.datasync.provider"
-            android:enabled="true"
-            android:exported="false" />
-        <provider
-            android:name=".recycler_view_test.EntriesProvider"
-            android:authorities="com.example.android.test.provider"
             android:enabled="true"
             android:exported="false" />
 
@@ -36,11 +32,13 @@
         <activity
             android:name=".HomeScreen"
             android:theme="@style/AppTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
 
         <service android:name=".authenticators.DummyAuthenticatorService">
@@ -75,7 +73,35 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".recycler_view_test.MainActivity">
+        <activity
+            android:name=".alarm_example.AlarmActivity"
+            android:label="@string/title_activity_alarm"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <receiver android:name=".alarm_example.SampleAlarmReceiver" />
+
+        <service android:name=".alarm_example.SampleSchedulingService" />
+
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".LogInActivity">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity android:name=".SignUpActivity">
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -85,12 +111,9 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".alarm_example.AlarmActivity"
-            android:label="@string/title_activity_alarm"
-            android:theme="@style/AppTheme.NoActionBar" />
-
-        <receiver android:name=".alarm_example.SampleAlarmReceiver" />
-        <service android:name=".alarm_example.SampleSchedulingService" />
+            android:name=".Main2Activity"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
