--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
         android:allowBackup="true"
@@ -15,22 +16,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <provider
-            android:name=".providers.EntriesContentProvider"
-            android:authorities="com.example.android.datasync.provider"
-            android:enabled="true"
-            android:exported="false" />
 
         <activity
-            android:name=".LogBookActivity"
-            android:label="dedeid"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".AddLogEntry"
+            android:name=".activities.AddLogEntryActivity"
             android:label="@string/title_activity_add_log"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".HomeScreen"
+            android:name=".activities.HomeScreenActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,33 +31,13 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".authenticators.DummyAuthenticatorService">
-            <intent-filter>
-                <action android:name="android.accounts.AccountAuthenticator" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.accounts.AccountAuthenticator"
-                android:resource="@xml/authenticator" />
-        </service>
-        <service
-            android:name=".synchronization.SyncService"
-            android:exported="true"
-            android:process=":sync">
-            <intent-filter>
-                <action android:name="android.content.SyncAdapter" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.content.SyncAdapter"
-                android:resource="@xml/syncadapter" />
-        </service>
-        <service android:name=".synchronization.SyncingFirebaseMessagingService">
+        <service android:name=".services.SyncingFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <service android:name=".synchronization.SyncingFirebaseInstanceIDService">
+
+        <service android:name=".services.SyncingFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
@@ -78,18 +50,25 @@
 
         <receiver android:name=".alarm_example.SampleAlarmReceiver" />
 
+        <receiver android:name=".receivers.BootReceiver"
+            android:enabled="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
         <service android:name=".alarm_example.SampleSchedulingService" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.EntriesListActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".LogInActivity"></activity>
-        <activity android:name=".SignUpActivity"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.LogInActivity" />
+        <activity android:name=".activities.SignUpActivity" />
         <activity
-            android:name=".RemindersActivity"
+            android:name=".activities.RemindersActivity"
             android:label="@string/title_activity_reminders"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
