Prace na reminderoch

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,14 @@
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/diabetes_icon"
+        android:label="@string/app_title"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".activities.AddLogEntryActivity"
             android:label="@string/title_activity_add_log"
@@ -36,7 +35,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
         <service android:name=".services.SyncingFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
@@ -44,20 +42,20 @@
         </service>
 
         <activity
-            android:name=".alarm_example.AlarmActivity"
+            android:name=".activities.AlarmActivity"
             android:label="@string/title_activity_alarm"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <receiver android:name=".alarm_example.SampleAlarmReceiver" />
-
-        <receiver android:name=".receivers.BootReceiver"
+        <receiver android:name=".receivers.SampleAlarmReceiver" />
+        <receiver
+            android:name=".receivers.BootReceiver"
             android:enabled="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
-        <service android:name=".alarm_example.SampleSchedulingService" />
+        <service android:name=".services.SampleSchedulingService" />
 
         <activity
             android:name=".activities.EntriesListActivity"
@@ -69,6 +67,10 @@
             android:name=".activities.RemindersActivity"
             android:label="@string/title_activity_reminders"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.AlarmNotificationActivity"
+            android:label="@string/title_activity_alarm_notification"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
