--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
 
         <activity
             android:name=".activities.EntriesListActivity"
-            android:label="@string/title_activity_main"
+            android:label="@string/List"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.LogInActivity" />
         <activity android:name=".activities.SignUpActivity" />
